--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 body{
-    background-color: #000000;
-    color:rgb(0, 255, 89);
+    background-color: #69675f;
+    color:rgb(3, 150, 54);
+}   
+
+header{
+     background-color:rgb(128, 255, 0);
+     padding: 40px;
+}
+
+.links{
+   color:black;
+   font-size: 30px;
+padding: 15px 25px;
+border-radius: 30px;
 }
